--- a/share/qtvcp/screens/qtdragon/qtdragon.ui
+++ b/share/qtvcp/screens/qtdragon/qtdragon.ui
@@ -12361,6 +12361,12 @@ ALL</string>
                         <property name="Qjoint_number" stdset="0">
                          <number>1</number>
                         </property>
+                        <property name="showSetOrigin" stdset="0">
+                         <bool>true</bool>
+                        </property>
+                        <property name="showLast" stdset="0">
+                         <bool>true</bool>
+                        </property>
                         <property name="homed" stdset="0">
                          <bool>false</bool>
                         </property>
@@ -12506,6 +12512,18 @@ ALL</string>
                         <property name="dialog_code_string" stdset="0">
                          <string>CALCULATOR</string>
                         </property>
+                        <property name="showSetOrigin" stdset="0">
+                         <bool>false</bool>
+                        </property>
+                        <property name="showZeroOrigin" stdset="0">
+                         <bool>false</bool>
+                        </property>
+                        <property name="showGotoOrigin" stdset="0">
+                         <bool>true</bool>
+                        </property>
+                        <property name="showLast" stdset="0">
+                         <bool>false</bool>
+                        </property>
                         <attribute name="buttonGroup">
                          <string notr="true">buttonGroup</string>
                         </attribute>
@@ -12598,6 +12616,21 @@ ALL</string>
                         <property name="dialog_code_string" stdset="0">
                          <string>CALCULATOR</string>
                         </property>
+                        <property name="showSetOrigin" stdset="0">
+                         <bool>false</bool>
+                        </property>
+                        <property name="showZeroOrigin" stdset="0">
+                         <bool>false</bool>
+                        </property>
+                        <property name="showGotoOrigin" stdset="0">
+                         <bool>true</bool>
+                        </property>
+                        <property name="showLast" stdset="0">
+                         <bool>false</bool>
+                        </property>
+                        <property name="showDivide" stdset="0">
+                         <bool>true</bool>
+                        </property>
                         <attribute name="buttonGroup">
                          <string notr="true">buttonGroup</string>
                         </attribute>
@@ -12637,6 +12670,21 @@ ALL</string>
                         </property>
                         <property name="Qjoint_number" stdset="0">
                          <number>0</number>
+                        </property>
+                        <property name="showSetOrigin" stdset="0">
+                         <bool>true</bool>
+                        </property>
+                        <property name="showZeroOrigin" stdset="0">
+                         <bool>false</bool>
+                        </property>
+                        <property name="showGotoOrigin" stdset="0">
+                         <bool>false</bool>
+                        </property>
+                        <property name="showLast" stdset="0">
+                         <bool>true</bool>
+                        </property>
+                        <property name="showDivide" stdset="0">
+                         <bool>false</bool>
                         </property>
                         <property name="homed" stdset="0">
                          <bool>false</bool>
@@ -12720,6 +12768,12 @@ ALL</string>
                         </property>
                         <property name="Qjoint_number" stdset="0">
                          <number>2</number>
+                        </property>
+                        <property name="showSetOrigin" stdset="0">
+                         <bool>true</bool>
+                        </property>
+                        <property name="showLast" stdset="0">
+                         <bool>true</bool>
                         </property>
                         <property name="homed" stdset="0">
                          <bool>false</bool>
@@ -13236,6 +13290,18 @@ ALL</string>
                         <property name="dialog_code_string" stdset="0">
                          <string>CALCULATOR</string>
                         </property>
+                        <property name="showSetOrigin" stdset="0">
+                         <bool>false</bool>
+                        </property>
+                        <property name="showZeroOrigin" stdset="0">
+                         <bool>false</bool>
+                        </property>
+                        <property name="showGotoOrigin" stdset="0">
+                         <bool>true</bool>
+                        </property>
+                        <property name="showLast" stdset="0">
+                         <bool>false</bool>
+                        </property>
                         <attribute name="buttonGroup">
                          <string notr="true">buttonGroup</string>
                         </attribute>
@@ -13539,6 +13605,12 @@ ALL</string>
                         <property name="Qjoint_number" stdset="0">
                          <number>3</number>
                         </property>
+                        <property name="showSetOrigin" stdset="0">
+                         <bool>true</bool>
+                        </property>
+                        <property name="showLast" stdset="0">
+                         <bool>true</bool>
+                        </property>
                         <property name="homed" stdset="0">
                          <bool>false</bool>
                         </property>
@@ -13783,6 +13855,18 @@ ALL</string>
                         <property name="dialog_code_string" stdset="0">
                          <string>CALCULATOR</string>
                         </property>
+                        <property name="showSetOrigin" stdset="0">
+                         <bool>false</bool>
+                        </property>
+                        <property name="showZeroOrigin" stdset="0">
+                         <bool>false</bool>
+                        </property>
+                        <property name="showGotoOrigin" stdset="0">
+                         <bool>true</bool>
+                        </property>
+                        <property name="showLast" stdset="0">
+                         <bool>false</bool>
+                        </property>
                         <attribute name="buttonGroup">
                          <string notr="true">buttonGroup</string>
                         </attribute>
@@ -13829,6 +13913,18 @@ ALL</string>
                         <property name="dialog_code_string" stdset="0">
                          <string>CALCULATOR</string>
                         </property>
+                        <property name="showSetOrigin" stdset="0">
+                         <bool>false</bool>
+                        </property>
+                        <property name="showZeroOrigin" stdset="0">
+                         <bool>false</bool>
+                        </property>
+                        <property name="showGotoOrigin" stdset="0">
+                         <bool>true</bool>
+                        </property>
+                        <property name="showLast" stdset="0">
+                         <bool>false</bool>
+                        </property>
                         <attribute name="buttonGroup">
                          <string notr="true">buttonGroup</string>
                         </attribute>
@@ -13865,6 +13961,12 @@ ALL</string>
                         </property>
                         <property name="Qjoint_number" stdset="0">
                          <number>4</number>
+                        </property>
+                        <property name="showSetOrigin" stdset="0">
+                         <bool>true</bool>
+                        </property>
+                        <property name="showLast" stdset="0">
+                         <bool>true</bool>
                         </property>
                         <property name="homed" stdset="0">
                          <bool>false</bool>
@@ -17626,7 +17728,7 @@ ALL</string>
              <number>2</number>
             </property>
             <property name="text">
-             <string>07:50:46 PM</string>
+             <string>04:22:03 PM</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignCenter</set>
@@ -18700,8 +18802,8 @@ ALL</string>
   <slot>btn_stop_clicked()</slot>
  </slots>
  <buttongroups>
+  <buttongroup name="buttonGroup"/>
   <buttongroup name="page_buttonGroup"/>
   <buttongroup name="mode_buttonGroup"/>
-  <buttongroup name="buttonGroup"/>
  </buttongroups>
 </ui>
