qtdragon/hd -qtdragon stylesheet: enlarge the editor buttons

--- a/share/qtvcp/screens/qtdragon_hd/qtdragon_hd.qss
+++ b/share/qtvcp/screens/qtdragon_hd/qtdragon_hd.qss
@@ -485,3 +485,15 @@ qproperty-center_gradient_color: #404040;
 qproperty-bezel_color: orange;
 qproperty-bezel_width: 2;
 }
+
+GcodeEditor QToolButton {
+    min-width: 40;
+    height: 40;
+    font: 12pt "Lato Heavy";
+}
+
+GcodeEditor QLineEdit {
+    width: 120;
+    height: 35;
+    font: 12pt "Lato Heavy";
+}
