--- a/configs/apps/gladevcp/animated-backdrop/cairodraw.ui
+++ b/configs/apps/gladevcp/animated-backdrop/cairodraw.ui
@@ -5,7 +5,7 @@
   <requires lib="gladevcp" version="0.0"/>
   <object class="GtkWindow" id="window1">
     <property name="can-focus">False</property>
-    <signal name="show" handler="on_expose" swapped="no"/>
+    <signal name="draw" handler="on_draw" swapped="no"/>
     <child>
       <object class="GtkFixed" id="fixed1">
         <property name="visible">True</property>
